<resources>
    <string name="app_name">DigiLokal</string>
    <string name="title_signup_page">Selangkah lagi...</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_email">Daftar</string>
    <string name="title_login_page">Selamat datang kembali!</string>
    <string name="message_login_page">Senang bertemu denganmu lagi! Kembalilah dan lanjutkan perjalanan Anda bersama kami</string>
    <string name="email_title">Email</string>
    <string name="signup_text">Belum punya akun? Sign-up</string>
    <string name="login">Masuk</string>
    <string name="join_now">Gabung Sekarang</string>
    <string name="login_now">Sudah punya akun? Log-in</string>
    <string name="register_description">Buat akun untuk menyimpan dan mendapatkan daftar program yang direkomendasikan</string>
    <string name="username">Nama Pengguna</string>
    <string name="email_address">Alamat Email</string>
    <string name="password_hint">Kata Sandi (8+ Characters)</string>
    <string name="tos_pp">Dengan mendaftar, Anda setuju dengan Privacy Policy dan Terms of Service</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_projects">Projects</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="top_influencer_category">Influencer Pilihan</string>
    <string name="services_category_title">Digital Marketing</string>
    <string name="show_more">Lihat Semua</string>
    <string name="add">\u0040</string>
    <string name="top_services_category">Jasa Pilihan</string>
    <string name="search_influencer_title">Cari Influencer</string>
    <string name="search_influencer_description"><![CDATA[Dapatkan jasa promosi produk atau bisnis Anda dengan nano & micro influencer]]></string>
    <string name="rate_card">Rate Card</string>
    <string name="edit_profile">Ubah Profile</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="edit_detail">Detail Pengguna</string>
    <string name="edit">Ubah</string>
    <string name="liked_influencer">Influencer Yang Disukai</string>
    <string name="others">Lainnya</string>
    <string name="rp">Rp</string>
    <string name="on_progress">DALAM PROSES</string>
    <string name="projects">Projects</string>
    <string name="my_profile">My Profile</string>

<!--    placeholder-->
    <string name="warung_maknyus">Warung Maknyus</string>
    <string name="influencer_1">tarisharf</string>
    <string name="influencer_2">tifanny_jolie</string>
    <string name="influencer_3">graciellavioletta</string>
    <string name="influencer_4">edwarddwardx</string>
</resources>